# rust_learing

./: .gitignore  README.md
guessing_game/: Cargo.toml
guessing_game/src/: main  main.rs
hello_cargo/: Cargo.toml  README.md
hello_cargo/src/: main  main.rs
hello_collections/: Cargo.toml
hello_collections/src/: main  main.rs
hello_crypto/: Cargo.toml
hello_crypto/src/: main.rs
hello_enums/: Cargo.toml
hello_enums/src/: main.rs
hello_generic/: Cargo.toml  README.md
hello_generic/src/: lib.rs  main  main.rs
hello_modules/: Cargo.toml
hello_modules/restaurant/src/: lib.rs
hello_modules/src/: func.rs  main.rs
hello_structs/: Cargo.toml
hello_structs/src/: main  main.rs
hello_tests/: Cargo.toml
hello_tests/src/: main.rs
httpie/: Cargo.toml
httpie/src/: main.rs
minigrep/src/: lib.rs  main.rs
ownership/src/: main  main.rs
queryer/: Cargo.toml
quick_start/: test.rs
scrape_url/: Cargo.toml  rust.md
scrape_url/src/: main.rs
thumbor/: Cargo.toml  build.rs
thumbor/src/: main.rs
thumbor/src/pb/: mod.rs
variables/src/: main  main.rs
